log
Thu 21 Mar 2024 02:50:28 PM UTC: 
 tests:  0|5
total_score: 0/70
f64057f
Thu 21 Mar 2024 02:57:26 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
9cd1609
Thu 21 Mar 2024 03:00:33 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
fa37640
Thu 21 Mar 2024 03:05:19 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
   65 |   printf("%d", item);
      |           ~^   ~~~~
      |            |   |
      |            int int *
      |           %ls
cc1: all warnings being treated as errors
Compilation failed
0995f15
Thu 21 Mar 2024 03:05:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ef28814
Thu 21 Mar 2024 03:07:02 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
650f08e
Thu 21 Mar 2024 03:10:14 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
8d122e9
Thu 21 Mar 2024 03:50:49 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
76241b2
Thu 21 Mar 2024 04:49:42 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:20: error: ‘pila’ undeclared (first use in this function)
  104 |     int item = top(pila);
      |                    ^~~~
exercises.c:104:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:105:15: error: ‘head’ undeclared (first use in this function)
  105 |     push(aux, head);
      |               ^~~~
exercises.c:104:9: error: unused variable ‘item’ [-Werror=unused-variable]
  104 |     int item = top(pila);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d5644c
Thu 21 Mar 2024 04:49:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  104 |     int item = top(P1);
      |                ^~~
exercises.c:105:15: error: ‘head’ undeclared (first use in this function)
  105 |     push(aux, head);
      |               ^~~~
exercises.c:105:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:104:9: error: unused variable ‘item’ [-Werror=unused-variable]
  104 |     int item = top(P1);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
6cb1672
Thu 21 Mar 2024 04:50:32 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a2427c2
